--- a/front/src/components/screen/index.css
+++ b/front/src/components/screen/index.css
@@ -1,6 +1,6 @@
 .screen {
     overflow: hidden;
-    border: 2px solid;
+    /* border: 2px solid; */
     /* background-color: black; */
     padding: 2px;
     position: absolute;
