--- a/front/src/components/screen/index.css
+++ b/front/src/components/screen/index.css
@@ -1,22 +1,16 @@
 .screen {
-    overflow: hidden;
-    /* border: 2px solid; */
-    /* background-color: black; */
-    padding: 2px;
+    object-fit: cover;
     position: absolute;
-    /* left: 0px;
-    top: 0px; */
     display: inline-block;
     outline-style: none;
-    /* transform: translate(50px, 50px); */
 }
 .video {
-    position: relative;
-    height: 120%;
-    background-color: black;
-    cursor: pointer;
-    transform: translate(-20%, -10%) scaleX(1);
+    object-fit: cover;
+    position: absolute;
+    border-radius: 50%;
     transform-origin: 50% 50%;
+    width: 100%;
+    height: 100%;
 }
 .videoStatus {
     position: relative;
